# spinoff

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: all_spinners.rs  simple.rs  stop_and_persist.rs  stream.rs  thread.rs
src/: color.rs  lib.rs  printer.rs  spinner_data.rs  spinner_enum.rs  spinners.rs  streams.rs  utils.rs
src/utils/: mod.rs  printer.rs  spinner_data.rs  spinner_enum.rs
