[package]
name = "spinoff"
version = "0.5.4"
edition = "2021"
authors = ["ad4m"]
description = "Simple to use Rust library for displaying spinners in the terminal"
license = "MIT"
homepage = "https://github.com/ad4mx/spinoff"
repository = "https://github.com/ad4mx/spinoff"
readme = "README.md"
keywords = ["spinner", "spin", "loader", "cli", "terminal"]
categories = ["command-line-interface"]
include = ["src/**/*", "README.md"]

[dependencies]
maplit = "1.0.2"
strum = { version = "0.24.0", features = ["derive"] }
once_cell = "1.13.0"
colored = "2.0.0"
